<resources>
    <string name="app_name">荆楚大学堂</string>

    <string name="tob_home">首页</string>
    <string name="tab_course">课程</string>
    <string name="tab_center">学习中心</string>
    <string name="tab_account">我的</string>

    <string name="type_it">计算机</string>
    <string name="type_engineering">工科</string>
    <string name="type_economy">经济</string>
    <string name="type_humanity">人文</string>
    <string name="type_philosophy">哲学</string>
    <string name="type_ideology">思政</string>
    <string name="type_science">理科</string>
    <string name="type_other">其他</string>

    <string name="about_desc">\t\t\t\t荆楚大学堂，一个在线实用技能学习平台，该平台于2017年6月底正式上线，主要为学习者
        提供海量、优质的课程，课程结构严谨，用户可以根据自身的学习程度，自主安排学习进度。荆楚大学堂的宗旨是，为每一位想
        真真正正学到些实用知识、技能的学习者，提供贴心的一站式学习服务。\n\t\t\t\t荆楚大学堂,学习成就梦想</string>

</resources>
