<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="vertical"
    >

    <!--第一排-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/typeView1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onTest"
            >
            <cn.carbs.android.avatarimageview.library.AvatarImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatar1"
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="@dimen/course_type_item_width"
                android:layout_gravity="center_horizontal"
                app:aiv_BoarderWidth="0dp"
                app:aiv_ShowBoarder="false"
                app:aiv_TextSizeRatio="0.4"/>

            <TextView
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/course_type_item_marginTop"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/type_it"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/typeView2"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <cn.carbs.android.avatarimageview.library.AvatarImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatar2"
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="@dimen/course_type_item_width"
                android:layout_gravity="center_horizontal"
                app:aiv_BoarderWidth="0dp"
                app:aiv_ShowBoarder="false"
                app:aiv_TextSizeRatio="0.4"/>

            <TextView
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/course_type_item_marginTop"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/type_economy"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/typeView3"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <cn.carbs.android.avatarimageview.library.AvatarImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatar3"
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="@dimen/course_type_item_width"
                android:layout_gravity="center_horizontal"
                app:aiv_BoarderWidth="0dp"
                app:aiv_ShowBoarder="false"
                app:aiv_TextSizeRatio="0.4"/>

            <TextView
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/course_type_item_marginTop"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/type_humanity"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/typeView4"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <cn.carbs.android.avatarimageview.library.AvatarImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatar4"
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="@dimen/course_type_item_width"
                android:layout_gravity="center_horizontal"
                app:aiv_BoarderWidth="0dp"
                app:aiv_ShowBoarder="false"
                app:aiv_TextSizeRatio="0.4"/>

            <TextView
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/course_type_item_marginTop"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/type_society"
            />
        </LinearLayout>

    </LinearLayout>


    <!--第二排-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/typeView5"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <cn.carbs.android.avatarimageview.library.AvatarImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatar5"
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="@dimen/course_type_item_width"
                android:layout_gravity="center_horizontal"
                app:aiv_BoarderWidth="0dp"
                app:aiv_ShowBoarder="false"
                app:aiv_TextSizeRatio="0.4"/>

            <TextView
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/course_type_item_marginTop"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/type_science"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/typeView6"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <cn.carbs.android.avatarimageview.library.AvatarImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatar6"
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="@dimen/course_type_item_width"
                android:layout_gravity="center_horizontal"
                app:aiv_BoarderWidth="0dp"
                app:aiv_ShowBoarder="false"
                app:aiv_TextSizeRatio="0.4"/>

            <TextView
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/course_type_item_marginTop"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/type_engineering"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/typeView7"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <cn.carbs.android.avatarimageview.library.AvatarImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatar7"
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="@dimen/course_type_item_width"
                android:layout_gravity="center_horizontal"
                app:aiv_BoarderWidth="0dp"
                app:aiv_ShowBoarder="false"
                app:aiv_TextSizeRatio="0.4"/>

            <TextView
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/course_type_item_marginTop"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/type_examination"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/typeView8"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <cn.carbs.android.avatarimageview.library.AvatarImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatar8"
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="@dimen/course_type_item_width"
                android:layout_gravity="center_horizontal"
                app:aiv_BoarderWidth="0dp"
                app:aiv_ShowBoarder="false"
                app:aiv_TextSizeRatio="0.4"/>

            <TextView
                android:layout_width="@dimen/course_type_item_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/course_type_item_marginTop"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/type_other"
            />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>